[project]
name = "webprobe"
version = "0.1.0"
description = "Python port of open-webSearch."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "httpx>=0.28.1",
    "modelcontextprotocol>=1.0.1",
    "pytest>=9.0.3,<9.1",
    "pytest-asyncio>=0.22.0",
]

[project.scripts]
webprobe = "webprobe:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
