[project]
name = "mcpwebprobe"
version = "0.1.2"
description = "Python port of open-webSearch."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "httpx>=0.28.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[project.scripts]
webprobe = "mcpwebprobe:main"
search = "mcpwebprobe.main:_run_search"


[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "build>=1.4.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/Ddilibe/webprobe"
Issues = "https://github.com/Ddilibe/webprobe"
